--- a/Classes/ProgramGroupAddController.xib
+++ b/Classes/ProgramGroupAddController.xib
@@ -57,7 +57,7 @@
 			<object class="IBUITextField" id="897347650">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
-				<string key="NSFrameSize">{246, 44}</string>
+				<string key="NSFrame">{{0, 7}, {253, 31}}</string>
 				<reference key="NSSuperview"/>
 				<bool key="IBUIOpaque">NO</bool>
 				<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -71,6 +71,11 @@
 					<object class="NSColorSpace" key="NSCustomColorSpace">
 						<int key="NSID">2</int>
 					</object>
+				</object>
+				<object class="NSFont" key="IBUIFont">
+					<string key="NSName">Helvetica</string>
+					<double key="NSSize">16</double>
+					<int key="NSfFlags">16</int>
 				</object>
 				<bool key="IBUIClearsOnBeginEditing">YES</bool>
 				<bool key="IBUIAdjustsFontSizeToFit">YES</bool>
